--- a/RmarkdownFinalProject.Rmd
+++ b/RmarkdownFinalProject.Rmd
@@ -144,10 +144,10 @@ drug_df %>%
         plot.caption = element_text(family = "Times New Roman"),
         axis.text.y = element_text(family = "Times New Roman"),
         plot.subtitle = element_text(family = "Times New Roman", size = 10, hjust = 0.5)) +
-  labs(title = str_wrap("Level of psycological distress in the past month vs illicit drug use in the past month for those 18-29 years old"),
-       subtitle = "Level of psycological distress calculated using the K6 questions on a scale from 0-24",
+  labs(title = str_wrap("Level of psychological distress in the past month vs illicit drug use in the past month for those 18-29 years old"),
+       subtitle = "Level of psychological distress calculated using the K6 questions on a scale from 0-24",
        caption = "Source: NSDUH",
-       x = "Level of psycological distress in the past month",
+       x = "Level of psychological distress in the past month",
        y = "Percentage which used illicit drugs in the past month") +
   geom_smooth(color = "red",
               method = "lm",
@@ -178,11 +178,11 @@ drug_df %>%
         plot.caption = element_text(family = "Times New Roman"),
         axis.text.y = element_text(family = "Times New Roman"),
         plot.subtitle = element_text(family = "Times New Roman", hjust = 0.5, size = 10)) +
-  labs(title = str_wrap("Illicit drug use in the past month vs. average level of psycological distress for those 18-29 years old"),
-       subtitle = "Level of psycological distress calculated using the K6 questions on a scale from 0-24",
+  labs(title = str_wrap("Illicit drug use in the past month vs. average level of psychological distress for those 18-29 years old"),
+       subtitle = "Level of psychological distress calculated using the K6 questions on a scale from 0-24",
        caption = "Source: NSDUH",
        x = "If used illicit drugs in past month",
-       y = "Average level of psycological distress")
+       y = "Average level of psychological distress")
 ```
 
 ```{r, echo = FALSE}
